Fixed some layout issues

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,5 +1,6 @@
 #icon {
   color: #042f68;
+  padding-top: 30px;
 }
 
 #icon:hover {
