--- a/client/src/components/Navigation/Navigation.css
+++ b/client/src/components/Navigation/Navigation.css
@@ -15,11 +15,11 @@
 
 .nav-link:visited {
   text-decoration: none;
-  color: #ffffff;
+  color: #ffff;
 }
 
 .nav-link.active {
-  color: #1ad1db;
+  color: #042f68;
   display: flex;
 }
 
