--- a/client/src/pages/About/About.css
+++ b/client/src/pages/About/About.css
@@ -17,13 +17,17 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 50px;
   text-align: center;
-  padding-right: 165px;
-  color: #ffffff;
-  
+  color: #ffff;
+  padding-top: 10px;
+  padding-bottom: 20px;
 }
 
 #p-about {
   font-family: Arial, Helvetica, sans-serif;
   color: #505356;
   text-align: center;
+}
+
+#region-menu {
+  color: #042f68
 }
