--- a/client/src/pages/Lakes/Lakes.css
+++ b/client/src/pages/Lakes/Lakes.css
@@ -22,6 +22,7 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: center;
+    color: #042f68;
 }
 
 #p-about {
